force-app/main/default/objects/Field_Mappings__mdt/fields/NetSuite_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Field_API_Name__c</fullName>
    <label>NetSuite Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>