force-app/main/default/objects/Field_Mappings__mdt/fields/Object_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Object_Mapping__c</fullName>
    <label>Object Mapping</label>
    <referenceTo>Object_Mapping__mdt</referenceTo>
    <relationshipLabel>Field Mappings</relationshipLabel>
    <relationshipName>Field_Mappings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>