force-app/main/default/objects/Field_Mappings__mdt/fields/SFDC_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Field_API_Name__c</fullName>
    <label>SFDC Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>